# banking-compliance

./: README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/adapters/: __init__.py
src/adapters/inbound/: __init__.py  http_adapter.py
src/adapters/outbound/: __init__.py  in_memory_repository.py  mock_services.py
src/application/: __init__.py  dtos.py  mappers.py
src/application/use_cases/: create_customer.py  monitor_transaction.py  verify_customer.py
src/domain/: __init__.py  aggregates.py  domain_events.py  entities.py  value_objects.py
src/domain/ports/: __init__.py  external_services.py  repositories.py
src/domain/services/: __init__.py  compliance_service.py
src/infrastructure/: __init__.py  app.py  container.py
tests/integration/: test_use_cases.py
tests/unit/: test_domain_aggregates.py  test_domain_entities.py
